tests/error/divide_by_zero.gw
#! [contains] ZeroDivideException
[ complex(0.0, 0/0) ];
